--- a/views/version/patchDetail.ejs
+++ b/views/version/patchDetail.ejs
@@ -378,7 +378,7 @@
                                                     <div class="center">
                                                         <button type="button" class="btn btn-sm btn-success"
                                                                 style="margin-right: 20px;"
-                                                                onclick="window.location.href='/statistics'">
+                                                                onclick="window.location.href='/statistics/<%=patch.version%>'">
                                                             点击跳转至数据统计页面查看最新数据.
                                                         </button>
                                                     </div>
