--- a/views/version/baseDetail.ejs
+++ b/views/version/baseDetail.ejs
@@ -102,7 +102,7 @@
                         <% if (user.level === 1) { %>
                         <form id="addForm" class="form-horizontal" role="form"
                               enctype="multipart/form-data"
-                              method="post" action="api/Upload">
+                              method="post" action="/uploadPatch">
                             <div class="row">
                                 <div class="col-sm-12">
                                     <div class="widget-box collapsed">
